om/ompy/parser/test/programs/illformed/escaped_open.om
do
      `{Hello
      wor {

      ld } } blah
====
0
5
12
